Google Mobile Ads Unity Plugin Change Log

**************
Version 7.0.0
**************

Plugin:
- Added support for GMA iOS SDK v9. Requires using GMA iOS SDK v9.0.0 or higher.
- Fixed https://github.com/googleads/googleads-mobile-unity/issues/1620
- Updated to use External Dependency Manager for Unity 1.2.169.

Built and tested with:
- Google Play services 20.6.0
- Google Mobile Ads iOS SDK 9.0.0
- External Dependency Manager for Unity 1.2.169.

**************
Version 6.1.2
**************

Plugin:
- Fixed Github issue [1786](https://github.com/googleads/googleads-mobile-unity/issues/1786) related to GoogleMobileAdsSettings.
- Fixed issue related to missing GADUAdNetworkExtras.h file when using some mediation adapters.

Built and tested with:
- Google Play services 20.2.0
- Google Mobile Ads iOS SDK 8.8.0
- External Dependency Manager for Unity 1.2.165.

Known issue:
- iOS Resolver library cannot be loaded in Unity 2021.1.11 and 2021.1.12. It can be loaded properly with Unity 2021.1.10. See https://github.com/googlesamples/unity-jar-resolver/issues/441 for more information.

**************
Version 6.1.1
**************

Plugin:
- Added support for ad inspector.

Built and tested with:
- Google Play services 20.2.0
- Google Mobile Ads iOS SDK 8.8.0
- External Dependency Manager for Unity 1.2.165.

Known issue:
- iOS Resolver library cannot be loaded in Unity 2021.1.11 and 2021.1.12. It can be loaded properly with Unity 2021.1.10. See https://github.com/googlesamples/unity-jar-resolver/issues/441 for more information.


**************
Version 6.1.0
**************

Plugin:
- Fixed https://github.com/googleads/googleads-mobile-unity/issues/1620
- Added support for iOS 14+ [same app key](https://developers.google.com/admob/ios/ios14)
- Added support for App Open ads.

Built and tested with:
- Google Play services 20.2.0
- Google Mobile Ads iOS SDK 8.8.0
- External Dependency Manager for Unity 1.2.165.

Known issue: