@@ -5,10 +5,7 @@ application's manifest, adding the necessary metadata
 required for displaying ads.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.google.unity">
-  <uses-permission android:name="android.permission.READ_PHONE_STATE" tools:node="remove" />
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove" />
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="remove" />
+  <uses-sdk android:minSdkVersion="16"/>
   <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
